<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="app_name">bligh-HabitTracker</string>
    <string name="edit_message">Enter a new habit</string>
    <string name="button_save">Save</string>
    <string name="delete_button">Delete habits</string>
    <string name="view_button">Habit Stats</string>
</resources>