<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/body"
        android:layout_width ="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:id="@+id/sunday" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/monday" />
    <Button
        android:id="@+id/saveHabit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:onClick="saveHabit"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_button"
            android:id="@+id/view_button"
            android:layout_gravity="left|bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:id="@+id/delete_button"
            android:layout_gravity="right" />
    </LinearLayout>

</LinearLayout>